Fix wrangler.toml to serve built dist folder (not source index.html)

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,18 +2,13 @@
 name = "jedbillyb-com"
 type = "javascript"
 account_id = ""
-workers_dev = false
+workers_dev = true
 main = "dist/index.html"
-site = { bucket = "./dist" }
+
+[site]
+bucket = "./dist"
 
 [build]
 command = "npm run build"
 cwd = "./"
-watch_paths = ["src/**/*.ts", "src/**/*.tsx"]
 
-[build.upload]
-format = "service-worker"
-
-[env.production]
-route = ""
-zone_id = ""
